--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "JavaSampleApproach.com",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.16.3",
     "multer": "^1.3.0",
     "pg": "^7.4.3",
